# mpeg-pcc-dmetric

./: LICENSE.md  README.md
doc/: README.about.md  README.clone.md  mpeg-pcc-dmetric-sw-manual.tex
source/: CMakeLists.txt  main.cpp  pcc_distortion.cpp  pcc_distortion.hpp  pcc_processing.cpp  pcc_processing.hpp
test/: anchor.py  config.ini  intrinsic.py
